Fix: Ajuste de SecurityConfig para deploy.